--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-jwt-cookiecombo": "^1.0.5",
-    "passport-local-mongoose": "^8.0.0"
+    "passport-local-mongoose": "^8.0.0",
+    "react-router-dom": "^6.20.0"
   }
 }
