--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "Full stack Ecommerce App",
   "type": "module",
   "main": "index.js",
+
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
-    "build": "npm i"
+    "start":"node index.js",
+    "postinstall": "cd client && npm install && npm run build",
+    "server": "node index.js",
+    "client":"npm run dev --prefix client"
   },
   "keywords": [],
   "author": "",
