--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
     "start":"node index.js",
-    "postinstall": "cd client && npm install && npm run build",
+    "postinstall": "cd client && npm install --production=false && npm run build",
     "server": "node index.js",
     "client":"npm run dev --prefix client"
   },
